Bug 293122 - synchronizing when selecting folder does not work
Summary: synchronizing when selecting folder does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 4.8
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-02 09:07 UTC by Silver Salonen
Modified: 2012-02-02 15:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2012-02-02 09:07:55 UTC
Version:           4.8 (using KDE 4.8.0) 
OS:                Linux

When I go onto the IMAP-folder, the folder is not synchronized, although it should. When I click "Synchronize folder" button, new messages are retrieved immediately.
I've tried it both with inherited and non-inherited folder settings.

Reproducible: Always

Steps to Reproduce:
1) Enable folder option "Synchronizing when selecting this folder"
2) Make sure the folder has some new e-mail
3) Go onto the folder

Actual Results:  
Folder contents stays as it is

Expected Results:  
Folder contents should be synchronized
Comment 1 Laurent Montel 2012-02-02 14:39:03 UTC
Git commit cec7008b8cfd0dc5ecb7c30c8f135e2caa03d5ef by Montel Laurent.
Committed on 02/02/2012 at 15:38.
Pushed by mlaurent into branch 'master'.

Fix Bug 293122 - synchronizing when selecting folder does not work

FIXED-IN: 4.8.1

M  +6    -3    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/cec7008b8cfd0dc5ecb7c30c8f135e2caa03d5ef
Comment 2 Laurent Montel 2012-02-02 15:14:11 UTC
Git commit 326bcf5bc37353c06fb990b0e8810de3d20f4a74 by Montel Laurent.
Committed on 02/02/2012 at 15:38.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 293122 - synchronizing when selecting folder does not work

FIXED-IN: 4.8.1
(cherry picked from commit cec7008b8cfd0dc5ecb7c30c8f135e2caa03d5ef)

Conflicts:

	kmail/kmmainwidget.cpp

M  +7    -3    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/326bcf5bc37353c06fb990b0e8810de3d20f4a74