Fix Bug 293122 - synchronizing when selecting folder does not work

FIXED-IN: 4.8.1
BUG: 293122
(cherry picked from commit cec7008b8cfd0dc5ecb7c30c8f135e2caa03d5ef)

Conflicts:

	kmail/kmmainwidget.cpp